spacing corrected

--- a/carTrade/css/style.css
+++ b/carTrade/css/style.css
@@ -535,7 +535,7 @@ a{
 	margin: 0px;
 }
 .content{
-	padding: 0px 35px 0px 19px;
+	padding: 0px 0px 0px 19px;
 }
 .content ul li{
 	float: left;
